7.0.2: Fix layout bugs
Put the + and - zoom buttons in the right order compared to the
slider, make go to station buttons larger on mobile devices so that
it's easier to click on them on touch screens, make sure that
bubbles never overflow to the right of the window.

--- a/app/app/src/main/assets/static/css/game/game-view.css
+++ b/app/app/src/main/assets/static/css/game/game-view.css
@@ -58,6 +58,14 @@
 }
 
 
+/* #selectLine() */
+@media (max-device-width:480px){    /*Phones*/
+    .gotoButton {
+        padding: 0.5em;
+    }
+}
+
+
 /* #createMapList() */
 .mapListViews {
     display:flex;
